--- a/ngVioletMarketplaceMaterial/src/app/modules/ui/shared/components/buttons/nav-grad-button/nav-grad-button.component.scss
+++ b/ngVioletMarketplaceMaterial/src/app/modules/ui/shared/components/buttons/nav-grad-button/nav-grad-button.component.scss
@@ -1,13 +1,6 @@
 @import "/src/scss/utils/variables";
 @import "/src/scss/utils/mixins";
 
-@include glass-effect(
-  linear-gradient(135deg, rgba(199, 199, 199, 0.303) 0%, rgba(189, 189, 189, 0.443) 100%),
-  linear-gradient(90deg, rgba(197, 197, 197, 0.164) 0%, rgba(255, 255, 255, 0.124) 100%),
-  linear-gradient(180deg, rgba(121, 121, 121, 0.164) 0%, rgba(255, 255, 255, 0.124) 100%),
-  radial-gradient(circle at center, rgba(106, 106, 106, 0.15), rgba(105, 105, 105, 0.15) 70%)
-);
-
 .button-wrapper {
   height: 8rem;
   width: 150px;
@@ -25,7 +18,7 @@
     opacity: 0.3;
     top: 51%;
     height: 1px;
-    z-index: 2;
+    z-index: 4;
     width: 8em;
     transform: rotate(-67.5deg);
     background: blue;
@@ -36,25 +29,26 @@
   }
 
   &::after {
-    left: 106%;
+    left: 42%;
   }
 
   &::before {
-    left: -92%;
-    margin-right: 1px;
+    left: -67%;
   }
 }
 
 // THE A TAGS FOR THE NAV LINKS
 .nav-button {
-  @include rel-top-left($top: 40%);
-  @include basic-precise-font($size: 1.2rem, $align: center, );
+  @include rel-top-left($top: -5%);
+  @include basic-precise-font($size: 1.2rem, $align: center);
+  @include full-wh-no-mrgpad;
+  height: 110%;
 
   text-decoration: none;
   overflow: hidden;
-  background-image: linear-gradient(85.69deg, rgba(71, 29, 144, 0.3) 1.1%, rgba(14, 14, 69, 0.3) 71.94%), linear-gradient(93.31deg, #833ab4 0%, #fd1d1d 53.39%, #fcb045 94.05%);
+  background-image: linear-gradient(85.69deg, rgba(71, 29, 144, 0.5) 1.1%, rgba(14, 14, 69, 0.5) 71.94%), linear-gradient(93.31deg, #833ab4 0%, #fd1d1d 53.39%, #fcb045 94.05%);
 
-  transform: rotate(-22.5deg) translateX(25px);
+  transform: rotate(22.5deg) translate(-20px, 5px);
   filter: blur(0.01em) drop-shadow(0px 0px 1px $light-gray);
   transition: ease-out 0.6s;
   background-size: 200% 200%;
@@ -68,7 +62,6 @@
     text-underline-offset: 10px;
     text-decoration-thickness: 0.01rem;
     transition: ease-out 0.5s;
-    transform: scale(1.025) rotate(22.5deg) translateX(-8px);
     opacity: 1;
     filter: saturate(1.1) brightness(1.2);
   }
@@ -80,40 +73,23 @@
     z-index: 3;
     color: $text-primary-dark;
     font-family: "Nunito";
-    transform: rotate(-22.5deg) translate(-6px, -17px);
+    transform: rotate(-22.5deg) translate(5px, 65px);
   }
 
   &:hover .glass-wrapper {
-    opacity: 0.75;
+    opacity: 0.45;
+  }
+  
+  .glass-wrapper {
+    opacity: .6;
   }
 
-  .glass-wrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 6px;
-    z-index: 2;
-    padding: 0;
-    margin: 0;
-    opacity: 0.95;
-    background: linear-gradient(135deg, rgba(199, 199, 199, 0.303) 0%, rgba(189, 189, 189, 0.443) 100%), linear-gradient(90deg, rgba(0, 0, 0, 0.164) 0%, rgba(255, 255, 255, 0.124) 80%), linear-gradient(180deg, rgba(0, 0, 0, 0.164) 0%, rgba(255, 255, 255, 0.124) 80%),
-      radial-gradient(circle at center, rgba(106, 106, 106, 0.15), rgba(105, 105, 105, 0.15) 70%);
-  }
-  .glass-wrapper::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(135deg, rgba(0, 0, 0, 0.25) 0%, rgba(0, 0, 0, 0.15) 100%), radial-gradient(circle at center, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1) 70%);
-    z-index: -1;
-    border-radius: 6px;
-    padding: 0;
-    margin: 0;
-  }
+  @include glass-effect(
+    linear-gradient(135deg, rgba(199, 199, 199, 0.303) 0%, rgba(189, 189, 189, 0.443) 100%),
+    linear-gradient(90deg, rgba(197, 197, 197, 0.164) 0%, rgba(255, 255, 255, 0.124) 100%),
+    linear-gradient(180deg, rgba(121, 121, 121, 0.164) 0%, rgba(255, 255, 255, 0.124) 100%),
+    radial-gradient(circle at center, rgba(106, 106, 106, 0.15), rgba(105, 105, 105, 0.15) 70%)
+  );
 
   ::ng-deep .mdc-button__label {
     @include full-wh-no-mrgpad;
